# SumekamiScript

./: Cargo.toml  README.md
docs/: spec.md
src/: grammar.pest  main.rs  no_std.rs
src/parser/: mod.rs
